Update repositories maven info

--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,13 @@ buildscript {
     }
 
     repositories {
-        google()
-        jcenter()
+        // google()
+        // jcenter()
+
+        maven{ url'https://maven.aliyun.com/nexus/content/groups/public/' }
+        maven{ url'https://maven.aliyun.com/nexus/content/repositories/central' }
+        maven{ url'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven{ url'https://maven.aliyun.com/nexus/content/repositories/google' }
     }
 
     dependencies {
@@ -67,8 +72,13 @@ plugins {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+        // google()
+        // jcenter()
+
+        maven{ url'https://maven.aliyun.com/nexus/content/groups/public/' }
+        maven{ url'https://maven.aliyun.com/nexus/content/repositories/central' }
+        maven{ url'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven{ url'https://maven.aliyun.com/nexus/content/repositories/google' }
     }
 }
 
